@@ -50,7 +50,6 @@ use constant {
         '自由時報電子報',
         '自由財經',
         '自由電子報',
-        '自由評論網',
         '自立晚報',
         '芋傳媒 TaroNews',
         '華視新聞',
@@ -90,6 +89,7 @@ use constant {
     ],
 
     CATEGORY_NAMES => [
+        '自由評論網',
         '兩岸',
         '台灣政經',
         '台股新聞',
