@@ -241,3 +241,4 @@ http://www.xinhuanet.com/politics/2020-07/07/c_1126208394.htm
 http://news.cctv.com/2020/07/10/ARTIlxEbF6MxTqGCHp6ZDeAG200710.shtml
 https://focustaiwan.tw/society/202007100023
 https://taronews.tw/2020/07/11/668445/
+https://talk.ltn.com.tw/article/breakingnews/3194811
