@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for talk.ltn.com.tw
+
 v0.30.0 2020-07-12T17:10:32+0800
   - Add a site-specific extractor for focustaiwan.tw
   - Improve extraction of dateline and journailst for a few existing news sites.
